demo-api/deployments/k8s_node-port.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: demo-api
spec:
  type: NodePort
  selector: { app: demo-api }
  ports:
  ## nodePort port range: 30000-32767
  ## port: communcation between nodes, targetPort: pod port, nodePort: service node port
  - { protocol: TCP, port: 5030, targetPort: 5030, nodePort: 30030 }
  - { protocol: TCP, port: 5040, targetPort: 5040, nodePort: 30040 }
