demo-api/deployments/k8s_ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: demo-api
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    ingress.kubernetes.io/limit-connections: "1024"
    nginx.ingress.kubernetes.io/limit-rps: "256"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts: [ "*.dev.k8s.local" ]
    secretName: k8s.local

  rules:
  - host: demo-api.dev.k8s.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: { name: demo-api, port: { number: 5030 } }
